# interview

./: .gitignore  README.md  docker-compose.yml  env.example  package.json  render.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: agent.py  cache.py  config.py  guardrails.py  ingest_sources.py  main.py  memory_store.py  memory_tools.py  observability.py  prepare_database.py  rag_sources.py  schemas.py  vector_store.py
backend/evals/: __init__.py  evaluators.py  golden_dataset.py  run_langsmith_eval.py
backend/knowledge/: maintenance_manuals.md  quality_control_standards.md  safety_procedures.md
backend/tests/: test_cache.py  test_chat.py  test_guardrails.py  test_langsmith_eval.py  test_memory_store.py  test_memory_tools.py  test_observability.py  test_prepare_database.py  test_rag_agents.py  test_supervisor_memory.py  test_vector_store.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
