[project]
name = "manufacturing-agent-backend"
version = "0.1.0"
description = "FastAPI backend for a manufacturing supervisor agent vertical slice."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "langchain[anthropic]>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-postgres>=0.0.16",
    "langsmith>=0.10.0",
    "langgraph>=1.0.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.6.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
